# aiida-quad

./: README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish-on-pypi.yml
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py
src/aiida_quad/: __init__.py  calculation.py  calculations.py  cli.py  helpers.py  parser.py  parsers.py
tests/: test_calculations.py  test_cli.py
