[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "aiida-quad"
version = "0.1.0"
description = "immad quad"
dependencies = [
    "aiida-core>=2.0,<3"
]

[project.entry-points."aiida.calculations"]
"quad-calculation" = "aiida_quad.calculation:QuadCalcJob"

[project.entry-points."aiida.parsers"]
"quad-parser" = "aiida_quad.parser:QuadParser"

[tool.flit.module]
name = "aiida_quad"
